[tool.poetry]
name = "graphragzen"
version = "0.1.0"
description = ""
authors = ["benste <benstmrs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <=3.12"
llama-cpp-python = "^0.2.87"
leidenalg = "^0.10.2"
transformers = "^4.44.0"
networkx = "^3.3"
pandas = "^2.2.2"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
